--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -72,7 +73,27 @@
               <h4 class="tituloesp">ESP8266</h4>
               <h4>DESCRIÇÃO:</h4>
               <p>O ESP8266 é um microcontrolador com capacidade de conexão Wi-Fi, amplamente utilizado em projetos de IoT (Internet das Coisas). Ele permite conectar dispositivos a uma rede sem fio e controlar diversos componentes eletrônicos de forma remota.<br>Custo: R$26,00 a R$30,00.</p>
-              <img src="./img/esp.png">
+              <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/esp.png" class="d-block1 " alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/espespec.png" class="d-block2 " alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/custoesp.png" class="d-block3 " alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -83,9 +104,29 @@
               <span class="close">&times;</span>
               <h4 class="titulorele">RELÉ 5V</h4>
               <h4>DESCRIÇÃO:</h4>
-                <p> Módulo relé 5V é um dispositivo eletromecânico que permite controlar circuitos de alta potência com sinais de baixa potência, atuando como um interruptor controlado eletronicamente.<br>Custo: R$6,50 a R$28,00.
+                <p> Módulo relé 5V é um dispositivo eletromecânico que permite controlar circuitos de alta potência com sinais de baixa potência, atuando como um interruptor controlado eletronicamente.
               </p>
-              <img src="./img/rele.png">
+              <div id="carousel2" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./img/rele.png" class="d-block4 " alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/releespecificacoes.png" class="d-block5 " alt="">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./img/custoesp.png" class="d-block6 " alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             </div>
           </div>
 
@@ -207,7 +248,7 @@
               torná-lo mais seguro, confiável e eficiente para os trabalhadores.
               Diante disso, a automação nos possibilita programar um ESP8266
               para ativar e desativar máquinas de forma remota, otimizando a
-              segurança e a produtividade.<h3 class="description"><br>Alunos:</h3><p class="description"> Pedro Henrique Felix<br> Daniel de Paula<br> Miguel Soares<br> Henri Coelho<br> Vinicios da Silva<br></p>
+              segurança e a produtividade.
             </p>
           </div>
         </div>
@@ -273,5 +314,8 @@
     </main>
     <script src="./scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
