--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="content">
             <h2 class="title">DESAFIO</h2>
             <p class="description">
-                A Eletrônica Plaza, localizada na Borda da Mata, MG, é conhecida por oferecer reparação e manutenção de eletrônicos na região. Visando a expansão de seu negócio, a empresa deseja introduzir-se no ramo da automação residencial. Assim sendo, nosso grupo se dispõe ao desafio de desenvolver um protótipo correspondente a demanda solicitada com um projeto tanto para automação residencial, quanto para automação industrial
+                A Eletrônica Plaza, localizada na Borda da Mata - MG, é conhecida por oferecer reparação e manutenção de eletrônicos na região. Visando a expansão de seu negócio, a empresa deseja introduzir-se no ramo da automação residencial. Assim sendo, nosso grupo se dispõe ao desafio de desenvolver um protótipo correspondente a demanda solicitada com um projeto tanto para automação residencial, quanto para automação industrial
             </p>
             <div class="buttons">
               <button id="myBtn">SOLUÇÃO</button>
