--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <img src="./img/releespecificacoes.png" class="d-block5 " alt="">
                   </div>
                   <div class="carousel-item">
-                    <img src="./img/custoesp.png" class="d-block6 " alt="...">
+                    <img src="./img/relepreco.png" class="d-block6 " alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
