--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <span class="close">&times;</span>
               <h4 class="tituloesp">ESP8266</h4>
               <h4>DESCRIÇÃO:</h4>
-              <p>O ESP8266 é um microcontrolador com capacidade de conexão Wi-Fi, amplamente utilizado em projetos de IoT (Internet das Coisas). Ele permite conectar dispositivos a uma rede sem fio e controlar diversos componentes eletrônicos de forma remota.<br>Custo: R$26,00 a R$30,00.</p>
+              <p>O ESP8266 é um microcontrolador com capacidade de conexão Wi-Fi, amplamente utilizado em projetos de IoT (Internet das Coisas). Ele permite conectar dispositivos a uma rede sem fio e controlar diversos componentes eletrônicos de forma remota.</p>
               <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -168,7 +168,7 @@
                 <!-- Modal content -->
                 <div class="modal-content5">
                   <span class="close">&times;</span>
-                  <img src="./img/kamvas.jpeg" class="camvasimg">
+                  <img src="./img/CAMVAS2.jpeg" class="camvasimg">
                 </div>
               </div>
           </div>
